<resources>
    <string name="app_name">CovidTracker</string>

    <!--App strings-->
    <string name="covid19">Covid-19</string>
    <string name="confirmed">confirmed</string>
    <string name="recovery">Recovery</string>
    <string name="Deaths">Deaths</string>
    <string name="CasesNumber">Cases Numbers</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="active">Active</string>
    <string name="serious">Serious</string>
    <string name="statistics">Statistics</string>
    <string name="worldWide">World Wide</string>
    <string name="countries">Countries</string>
    <string name="topCountries">Top Countries</string>
    <string name="notifyMe">Notify Me</string>
    <string name="CasesPopulation">Cases Population</string>
    <string name="casesPerMillion">Cases Per Million</string>
    <string name="totalCasesPerMillion">Total Cases Per Million</string>
    <string name="country">Country</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dot" translatable="false">.</string>
    <string name="all">All</string>

    <!--contenient names-->
    <string name="africa">Africa</string>
    <string name="Europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="northAmarica">North Amarica</string>
    <string name="southAmarica">South Amarica</string>
    <string name="Australia">Australia</string>
    <string name="EnterSearchText">Enter Country to search</string>
    <string name="recovery_percentage">Recovery Percentage</string>
    <string name="testPerMillion">Tests Per Million</string>
    <string name="country_notification_message">"Get notified for the latest updates for this country "</string>
    <string name="unnotify">Don\'t Notify</string>
    <string name="updateInterval">Update every:</string>
    <string name="darkMode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="retry">Retry</string>


</resources>
