<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayoutGlobal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".global.GlobalFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/background_pic" />

                    <ImageView
                        android:id="@+id/settingBtnId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:clickable="true"
                        android:padding="16dp"
                        android:src="@drawable/ic_settings" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tajawalbold"
                        android:paddingStart="20dp"
                        android:paddingTop="41dp"
                        android:text="@string/covid19"
                        android:textColor="@color/textBlack"
                        android:textSize="27sp" />

                    <ProgressBar
                        android:id="@+id/progressBarId"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:progressBackgroundTint="@color/primeRed" />

                </FrameLayout>

                <TextView
                    android:id="@+id/textView3"
                    style="@style/textHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CasesNumber" />

                <LinearLayout
                    android:id="@+id/toggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/totalBtnId"
                        style="@style/appTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total" />

                    <Button
                        android:id="@+id/todayBtnId"
                        style="@style/appTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today" />
                </LinearLayout>

                <include layout="@layout/total_card" />

                <include layout="@layout/active_serious_layout" />

                <TextView
                    android:id="@+id/statisticsHeader"
                    style="@style/textHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics" />

                <include layout="@layout/statistics_card" />

                <TextView
                    android:id="@+id/topCountriesHeader"
                    style="@style/textHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/topCountries" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topCountriesRecyclerViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
