<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".countries_details.CountriesDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/country_background" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/tajawalbold"
                    android:maxWidth="193dp"
                    android:maxLines="2"
                    android:text="@string/country_notification_message"
                    android:textColor="@color/textBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/countryNameTV"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/backBtnId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:clickable="true"
                    android:padding="8dp"
                    android:src="@drawable/back_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/settingBtnId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:padding="16dp"
                    android:src="@drawable/ic_settings"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/countryNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="25dp"
                    android:text="USA"
                    android:textColor="@color/textBlack"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/countryFlag"
                    app:layout_constraintTop_toBottomOf="@+id/backBtnId" />

                <ImageView
                    android:id="@+id/countryFlag"
                    android:layout_width="20dp"
                    android:layout_height="11dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backBtnId"
                    app:srcCompat="@drawable/country_flag" />

                <Button
                    android:id="@+id/notifyBtnId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:drawablePadding="9dp"
                    android:text="@string/notifyMe"
                    android:textAllCaps="false"
                    android:minHeight="30dp"
                    android:textColor="@color/white"
                    android:background="@drawable/notify_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingBtnId" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>
    <include layout="@layout/population_details"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CasesNumber"
            style="@style/textHeader"/>
        <LinearLayout
            android:id="@+id/toggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/totalBtnId"
                style="@style/appTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"/>
            <Button
                android:id="@+id/todayBtnId"
                style="@style/appTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"/>
        </LinearLayout>
        <include layout="@layout/country_details_global_data"/>
        <include layout="@layout/active_serious_layout"/>
        <TextView
            android:id="@+id/statisticsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            style="@style/textHeader"/>
        <include layout="@layout/statistics_card"/>
    </LinearLayout>
</ScrollView>