<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:weightSum="1"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".50">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/recovery_percentage"
               android:textSize="12sp"
               android:textColor="@color/casePopulation"
               android:fontFamily="@font/tajawalbold"
               android:textAllCaps="false"/>
           <FrameLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="8dp">
               <ImageView
                   android:layout_width="44dp"
                   android:layout_height="44dp"
                   android:src="@drawable/ic_population"/>
               <TextView
                   android:id="@+id/percentageTVId"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:textStyle="bold"
                   android:textSize="14sp"
                   android:text="12"
                   android:textColor="@color/population_recovery"/>

           </FrameLayout>
       </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".50"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casesPerMillion"
            android:textSize="12sp"
            android:textColor="@color/casePopulation"
            android:fontFamily="@font/tajawalbold"
            android:textAllCaps="false"/>
        <TextView
            android:id="@+id/casesPerMillionTVId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/population_recovery"
            android:fontFamily="@font/tajawalbold"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/testPerMillion"
            android:textSize="12sp"
            android:textColor="@color/casePopulation"
            android:fontFamily="@font/tajawalbold"
            android:textAllCaps="false"/>
        <TextView
            android:id="@+id/testPerMillionTVId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/population_recovery"
            android:fontFamily="@font/tajawalbold"
            android:textAllCaps="false"/>
    </LinearLayout>


</LinearLayout>